// ── Zelus Launcher — Gradle Build ─────────────────────────────────────────────
// Requires JDK 17+.  Build fat JAR:  ./gradlew shadowJar
// Package for current OS:            ./gradlew jpackage
// Package all platforms (CI only):   ./gradlew jpackageAll

plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group   = 'com.zelus'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Gson for parsing manifest.json
    implementation 'com.google.code.gson:gson:2.11.0'
    // FlatLaf for a modern dark look-and-feel (drop-in for Swing)
    implementation 'com.formdev:flatlaf:3.4.1'
    implementation 'com.formdev:flatlaf-extras:3.4.1'
}

application {
    mainClass = 'com.zelus.launcher.ZelusLauncher'
}

jar {
    manifest {
        attributes(
            'Main-Class':       'com.zelus.launcher.ZelusLauncher',
            'Implementation-Version': project.version,
        )
    }
}

shadowJar {
    archiveClassifier = ''          // replaces the default JAR
    archiveFileName   = "zelus-launcher-${version}.jar"
    mergeServiceFiles()
}

// ── jpackage helpers ───────────────────────────────────────────────────────────
ext {
    jpackageBase = "${buildDir}/jpackage"
    appVendor    = "Zelus"
    appDesc      = "Zelus RSPS Launcher"
}

// Returns ['--icon', '<path>'] only when the icon file actually exists.
def iconArgs(String path) {
    return file(path).exists() ? ['--icon', path] : []
}

// Base args shared by all jpackage invocations.
def baseArgs(String type, String dest) {
    return [
        'jpackage',
        '--type',           type,
        '--name',           'ZelusLauncher',
        '--app-version',    project.version,
        '--vendor',         project.ext.appVendor,
        '--description',    project.ext.appDesc,
        '--input',          "${project.buildDir}/libs",
        '--main-jar',       "zelus-launcher-${project.version}.jar",
        '--main-class',     'com.zelus.launcher.ZelusLauncher',
        '--dest',           dest,
        '--java-options',   '-Xmx256m',
        '--java-options',   '-Dfile.encoding=UTF-8',
    ]
}

// ── app-image (portable folder, no installer tool required) ───────────────────
tasks.register('jpackageImage', Exec) {
    dependsOn 'shadowJar'
    group       = 'distribution'
    description = 'Builds a portable app-image folder (no WiX/installer required).'

    def os   = System.getProperty('os.name').toLowerCase()
    def dest = "${jpackageBase}/image"
    def icon = os.contains('win')  ? 'src/main/resources/zelus.ico'
             : os.contains('mac')  ? 'src/main/resources/zelus.icns'
             : 'src/main/resources/zelus.png'

    commandLine(*baseArgs('app-image', dest), *iconArgs(icon))
}

// ── Windows EXE installer (requires WiX 3.x) ─────────────────────────────────
tasks.register('jpackageWin', Exec) {
    dependsOn 'shadowJar'
    group       = 'distribution'
    description = 'Builds a Windows EXE installer (requires WiX Toolset 3.x).'

    commandLine(
        *baseArgs('exe', "${jpackageBase}/win"),
        *iconArgs('src/main/resources/zelus.ico'),
        '--win-menu',
        '--win-shortcut',
        '--win-dir-chooser',
    )
}

// ── macOS DMG installer ────────────────────────────────────────────────────────
tasks.register('jpackageMac', Exec) {
    dependsOn 'shadowJar'
    group       = 'distribution'
    description = 'Builds a macOS DMG installer (run on macOS only).'

    commandLine(
        *baseArgs('dmg', "${jpackageBase}/mac"),
        *iconArgs('src/main/resources/zelus.icns'),
        '--mac-package-name', 'ZelusLauncher',
    )
}

// ── Linux DEB installer ────────────────────────────────────────────────────────
tasks.register('jpackageLinux', Exec) {
    dependsOn 'shadowJar'
    group       = 'distribution'
    description = 'Builds a Linux DEB installer (run on Linux only).'

    commandLine(
        *baseArgs('deb', "${jpackageBase}/linux"),
        *iconArgs('src/main/resources/zelus.png'),
        '--linux-shortcut',
        '--linux-menu-group', 'Games',
    )
}

// ── Convenience alias: build installer for current OS ─────────────────────────
tasks.register('jpackage') {
    dependsOn 'shadowJar'
    group       = 'distribution'
    description = 'Alias: builds the installer for the current OS.'

    def os = System.getProperty('os.name').toLowerCase()
    if      (os.contains('win'))  dependsOn 'jpackageWin'
    else if (os.contains('mac'))  dependsOn 'jpackageMac'
    else                          dependsOn 'jpackageLinux'
}
